<resources>
    <string name="app_name" translatable="false">Qr4all</string>
    <string name="server_url"  translatable="false">http://qr4all.ru/</string>
    <string name="itemId" translatable="false">ID:</string>

    <string name="title_activity_show_qr">Show QR Code</string>
    <string name="dummy_button">Close window</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tap_to_scan">"Tap to capture. Pinch/Stretch to zoom"</string>

    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="widget_empty_title">No item selected</string>
    <string name="widget_empty_details">Please select an item to show information about it</string>

    <string name="scanQRCodeButtonDescription">Scan QR code</string>

    <string name="login_ContentDescription">Login</string>
    <string name="itemPhoto_ContentDescription">Item Phote</string>
    <string name="password_ContentDescription">Password</string>
    <string name="item_ContentDescription">Item</string>
    <string name="inputItemName_ContentDescription">Item name</string>
    <string name="inputItemDescrption_ContentDescription">Item details</string>
    <string name="showQrCode_ContentDescription">Show QrCode</string>
    <string name="itemIdContentDescription">item ID</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="no_authorization">Authrozation has not implemented yet, sorry</string>

</resources>
